# ISLayer

./: .gitignore  CHANGELOG.md  EXECUTION-SPEC.md  GRAPH-SPEC.md  GROUNDING-AGENT-SPEC.md  JOBAID-SPEC.md  JOURNEY-SPEC.md  LICENSE  METHODOLOGY.md  ONBOARDING-SPEC.md  README.md  REPORT-SPEC.md  SKILLS-SPEC.md  SPEC-TO-JIRA-DESIGN.md  SPEC-TO-JIRA-EXECUTIVE.md  STEP-SKILLS-SPEC.md  TEST-SPEC.md  TRIPLE-FLOW-SIM-PHASE1-SPEC.md  requirements.txt
triple-flow-sim/: .gitignore  README.md  pyproject.toml
triple-flow-sim/config/: loader.default.yaml
triple-flow-sim/tests/fixtures/: corpus_clean.loader.yaml  corpus_seeded.loader.yaml
triple-flow-sim/tests/fixtures/bpmn/: simple.bpmn  simple_seeded.bpmn
triple-flow-sim/tests/fixtures/corpus_clean/: README.md  triple_01.yaml  triple_02.yaml  triple_03.yaml
triple-flow-sim/tests/fixtures/corpus_seeded/: README.md  triple_01.yaml  triple_02.yaml  triple_03.yaml  triple_04_empty_intent.yaml  triple_05_no_preconditions.yaml  (+3 more)
triple-flow-sim/tests/integration/: test_mda_example.py  test_phase1_end_to_end.py  test_phase2_end_to_end.py  test_phase3_end_to_end.py
triple-flow-sim/triple_flow_sim/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
triple-flow-sim/triple_flow_sim/contracts/: __init__.py  finding.py  journey_context.py  trace.py  triple.py
triple-flow-sim/triple_flow_sim/evaluator/: __init__.py  ast_nodes.py  grammar.lark  parser.py  symbolic.py
triple-flow-sim/triple_flow_sim/reports/: inventory_report.py
triple-flow-sim/triple_flow_sim/ui/: __init__.py  graph_view.py  streamlit_app.py
(+449 files in other folders)
